adding more data, working on ch.3

--- a/2 - Resource Managers and Schedulers.ipynb
+++ b/2 - Resource Managers and Schedulers.ipynb
@@ -87,7 +87,7 @@
     "\n",
     "# Compile the code - There should be no output\n",
     "process = os.popen(\"cc /home/users/glick/intro-to-hpc/data/hello.c\\\n",
-    "-o /home/users/glick/intro-to-hpc/data/hello.out\")\n",
+    "-o /home/users/glick/intro-to-hpc/data/hello.out -e /dev/null\")\n",
     "print(process.read())\n",
     "\n",
     "# Run the code\n",
@@ -142,7 +142,7 @@
     "    file.write(\"echo h3ll0! >> {}\\n\".format(outpath))\n",
     "\n",
     "# Submit job\n",
-    "!qsub /home/users/glick/intro-to-hpc/data/submit_script.sh\n",
+    "!qsub /home/users/glick/intro-to-hpc/data/submit_script.sh -e /dev/null\n",
     "\n",
     "# List running jobs\n",
     "!qstat"
@@ -188,7 +188,7 @@
     "os.remove(manyout)\n",
     "\n",
     "for i in range(1,11):\n",
-    "    !echo \"echo $i >> $manyout\" | qsub"
+    "    !echo \"echo $i >> $manyout\" | qsub -e /dev/null"
    ]
   },
   {
@@ -237,26 +237,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Your job 2268 (\"STDIN\") has been submitted\n",
-      "Your job 2269 (\"STDIN\") has been submitted\n",
-      "Your job 2270 (\"STDIN\") has been submitted\n",
-      "Your job 2271 (\"STDIN\") has been submitted\n",
-      "Your job 2272 (\"STDIN\") has been submitted\n",
-      "Your job 2273 (\"STDIN\") has been submitted\n",
-      "Your job 2274 (\"STDIN\") has been submitted\n",
-      "Your job 2275 (\"STDIN\") has been submitted\n",
-      "Your job 2276 (\"STDIN\") has been submitted\n",
-      "Your job 2277 (\"STDIN\") has been submitted\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "import os\n",
@@ -269,22 +252,14 @@
     "\n",
     "# Generate random numbers\n",
     "for _ in range(1,11):\n",
-    "    !echo \"echo $((1 + RANDOM % 100)) >> $rand_out\" | qsub"
+    "    !echo \"echo $((1 + RANDOM % 100)) >> $rand_out\" | qsub -e /dev/null"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "31\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Read output file (after waiting for job to complete) - this could take 15 seconds or \n",
     "# Now, we compute the average\n",
